samples/_failures_safe/1761311279_031cdb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_811eed2f.c: In function ‘main’:
./samples/SAFE/__tmp_811eed2f.c:165:17: error: expected expression at end of input
  165 |                 print_matrix(&result,
      |                 ^~~~~~~~~~~~
./samples/SAFE/__tmp_811eed2f.c:165:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_811eed2f.c:165:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_811eed2f.c:165:17: error: expected declaration or statement at end of input
